--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="w-100">
         <h1 class="mb-3">HanSen Zhao
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
+        <div class="subheading mb-5">Stock Market Advisor📚</div>
         <p class="lead mb-4">More than two years of practical operation<br><br>
 
         Over 100% yield<br><br>
@@ -68,16 +68,16 @@
         200% return on a stock
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://github.com/stevenzhao2003">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a target="_blank" id="socialicon-2" href="https://github.com/stevenzhao2003">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://github.com/stevenzhao2003">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://github.com/stevenzhao2003">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
